# advent-of-code-2021

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: .gitconfig  Dockerfile  devcontainer.json  docker-compose.yml
