[project]
name = "advent_of_code_2021"
version = "0.0.1"
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "pandas~=1.3",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
homepage = ""

[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"


[tool]
[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[tool.pdm.dev-dependencies]
dev = [
    "black<22,>=21.10b0",
]
